# scmdp

./: .gitignore  README.md
examples/abstract/: CMakeLists.txt
examples/abstract/inc/: scmdp.h
examples/abstract/src/: main.c  scmdp.c
examples/calculator/: CMakeLists.txt
examples/calculator/inc/: scmdp.h
examples/calculator/src/: main.c  scmdp.c
inc/: scmdp.h
src/: scmdp.c
